make logo-icon div have a height of 25px at all screen sizes to fix alignment

--- a/src/components/Header/header.sass
+++ b/src/components/Header/header.sass
@@ -31,6 +31,9 @@ header .header-black-background
 
 .shopping-cart-icon
     justify-content: flex-end
+
+.logo-icon
+    height: 25px
         
 
 .mobile-header.row.main-container
